# nx_vulkan

./: .dialyzer_ignore.exs  .gitignore  247_TODO.md  248_TODO.md  CHECKLIST_FUSED_LEAPFROG.md  EXMC_PORT_PLAN.md  FAST_KERNELS_PLAN.md  FUSION_RESEARCH.md  LIMITATIONS.md  PATH_TO_FULL_PASS.md  PHASE3_STATUS.md  PLAN.md  PLAN_FUSED_LEAPFROG.md  README.md  RESEARCH_FAST_KERNELS.md  mix.exs  rust-toolchain.toml
bench/: adversarial.exs  leapfrog_bench.exs  pool_bench.exs  stress.exs
c_src/: nx_vulkan_shim.cpp  nx_vulkan_shim.h
c_src/spirit/: VENDOR.md
lib/: nx_vulkan.ex
lib/nx_vulkan/: backend.ex  codegen.ex  compiler.ex  fast.ex  fuse.ex  native.ex
native/nx_vulkan_native/: Cargo.toml  build.rs
native/nx_vulkan_native/src/: lib.rs
priv/shaders/: cast_f32_to_f64.spv  cast_f64_to_f32.spv  elementwise_binary.spv  elementwise_binary_broadcast.spv  elementwise_binary_broadcast_f64.spv  elementwise_binary_f64.spv  elementwise_unary.spv  elementwise_unary_f64.spv  fused_elementwise.spv  fused_elementwise_4in.spv  kinetic_energy.spv  leapfrog_chain_cauchy.spv  leapfrog_chain_exponential.spv  leapfrog_chain_halfnormal.spv  leapfrog_chain_normal.spv  leapfrog_chain_normal_f64.spv  leapfrog_chain_normal_lg.spv  leapfrog_chain_studentt.spv  leapfrog_chain_weibull.spv  leapfrog_normal.spv  logsumexp.spv  matmul.spv  matmul_tiled.spv  matmul_tiled16x2.spv  matmul_tiled32.spv  normal_logpdf.spv  random_philox.spv  reduce.spv  reduce_axis.spv  reduce_axis_f64.spv  reduce_full_f64.spv  transpose.spv
scripts/: build_and_test.sh
test/: nx_vulkan_test.exs
(+3 files in other folders)
